# yourMoment

./: .env.example  .gitignore  AGENTS.md  CLI.md  LICENSE  README.md  README_API.md  README_SERVICES.md  README_TASKS.md  TODO_comment_monitoring_speedup.md  TODO_refactor_monitoring.md  alembic.ini  cli.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.sandcastle/: Dockerfile  implement-prompt.md  main.mts
docs/agents/: triage.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  09319578e7e3_merge_multiple_heads.py  126e5931a1ba_add_prepared_status_to_aicomment.py  2026041401_add_discovery_backpressure_state.py  2026070601_add_posting_status_to_ai_comments.py  2526bb29dffe_merge_split_heads.py  2bde4dd4ea92_add_is_hidden_field_to_ai_comments_table.py  57b837dbc978_add_hide_comments_field_to_monitoring_.py  9c0b8ec3260d_add_reasoning_content_to_ai_comments.py  a1b2c3d4e5f6_add_llm_provider_id_to_monitoring_processes.py  add_task_filter_support.py  c4d5e6f7a8b9_fix_failed_status_allows_null_comment_content.py  d7f8e9a0b1c2_add_ai_comment_uniqueness_constraint.py  dc495c4925cc_add_is_admin_to_mymoment_logins.py  eb82f700314e_add_student_backup_tables.py  ef36ae3ec41f_add_monitoring_process_stage_tracking.py  f0c58f54ecfa_drop_monitoring_process_counter_columns.py  f8f3ae517756_fix_aicomment_constraints_for_prepared_.py
src/: __init__.py  config.py  main.py  scraper.py
src/ai/: __init__.py  base.py  mistral.py  template.py
src/api/: auth.py  comments.py  dev.py  error_utils.py  llm_providers.py  monitoring_processes.py  mymoment_articles.py  mymoment_credentials.py  prompt_templates.py  schemas.py  student_backup.py  utils.py  web.py
src/commands/: __init__.py  auth.py  comments.py  monitor.py  posts.py
src/config/: database.py  encryption.py  logging.py  settings.py
src/lib/: health.py
src/middleware/: error_handler.py  rate_limiter.py  validation.py
src/models/: __init__.py  ai_comment.py  article_version.py  base.py  llm_provider.py  monitoring_process.py  monitoring_process_login.py  monitoring_process_prompt.py  mymoment_login.py  mymoment_session.py  prompt_template.py  tracked_student.py  user.py  user_session.py
src/scraper/: __init__.py  auth.py  comments.py  main.py  monitor.py  posts.py
src/services/: __init__.py  auth_service.py  base_service.py  comment_service.py  llm_service.py  llm_types.py  monitoring_service.py  mymoment_credentials_service.py  mymoment_session_service.py  prompt_placeholders.py  prompt_service.py  scraper_service.py  session_service.py  student_backup_service.py  user_service.py
src/tasks/: __init__.py  article_discovery.py  article_monitor.py  article_preparation.py  comment_generation.py  comment_generator.py  comment_poster.py  comment_posting.py  monitoring_orchestrator.py  process_guards.py  scheduler.py  session_manager.py  student_backup.py  timeout_enforcer.py  worker.py
src/utils/: url_sanitizer.py
src/validators/: __init__.py  password.py
static/css/: styles.css
static/html/: impressum.html
static/js/: comments.js  components.js  dashboard.js  monitoring.js  pages.js  providers.js  utils.js
templates/: simple_base.html  simple_dashboard.html  simple_login.html  simple_profile.html  simple_register.html
templates/ai_comments/: detail.html  index.html
templates/llm_providers/: form.html  index.html
templates/monitoring_processes/: form.html  index.html
templates/mymoment_credentials/: form.html  index.html
templates/prompt_templates/: form.html  index.html
templates/student_backup/: article_versions.html  form.html  tracked_student_detail.html  tracked_students.html  version_detail.html
tests/: README.md  conftest.py  helper.py
tests/contract/: test_articles_detail.py.old  test_articles_get.py.old  test_auth_login.py  test_auth_logout.py  test_auth_register.py  test_comments_get.py  test_llm_providers_get.py  test_llm_providers_patch.py  test_llm_providers_post.py  test_monitoring_processes_post.py  test_monitoring_start.py  test_monitoring_stop.py  test_mymoment_credentials_get.py  test_mymoment_credentials_post.py  test_mymoment_credentials_test_endpoint.py  test_mymoment_credentials_update.py  test_prompt_templates_get.py  test_prompt_templates_management.py  test_prompt_templates_post.py  test_resource_ownership.py
tests/fixtures/: __init__.py  assertions.py  builders.py  loaders.py  stubs.py
tests/fixtures/factories/: __init__.py  _shared.py  comments.py  monitoring.py  mymoment.py  prompts.py  providers.py  student_backup.py  users.py
tests/fixtures/myMoment_html/: accounts_login.html  articles_get.html  articles_get_public.html  articles_index.html  manifest.json  profile.html
tests/integration/: test_ai_comment_workflow.py  test_database_integration.py  test_e2e_monitoring.py  test_llm_provider_setup.py  test_monitoring_process.py  test_mymoment_credentials.py  test_prompt_templates.py  test_scraper_service_integration.py  test_user_registration.py
tests/performance/: test_scraper_service_live.py  test_tabs_live.py
tests/support/: database.py  runtime.py
tests/unit/: test_ai_comment_model.py  test_base_model.py  test_database_config.py  test_helper_environment.py  test_llm_provider_model.py  test_monitoring_process_models.py  test_mymoment_models.py  test_prompt_template_model.py  test_scraper_service.py  test_user_model.py
tests/unit/db/: test_ai_comment_model.py  test_factories.py  test_llm_provider_model.py  test_monitoring_process_model.py  test_mymoment_login_model.py  test_mymoment_session_model.py  test_prompt_template_model.py  test_runtime_contract.py  test_scenarios.py  test_student_backup_models.py
tests/unit/pure/: test_comment_service_formatting.py  test_fixture_loaders.py  test_fixture_manifest.py  test_fixture_stubs.py  test_logging_config.py  test_prompt_placeholders.py  test_scraper_cookie_persistence.py  test_scraper_parsers.py  test_url_sanitizer.py
tests/unit/services/: test_comment_service.py  test_monitoring_service.py  test_mymoment_credentials_service.py  test_mymoment_session_service.py  (+2 more)
(+8 files in other folders)
