[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yourMoment"
version = "0.1.0"
description = "yourMoment - LLM-gestützte Kommentare für die myMoment-Plattform"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "yourMoment Development Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11,<3.14"
# Hinweis: Python 3.13 experimenteller Free-Threading-Build wird unterstützt
dependencies = [
    # Web-Framework
    "fastapi>=0.118.0,<0.120.0",
    "uvicorn[standard]>=0.37.0,<0.40.0",
    "gunicorn>=23.0.0,<24.0.0",
    "jinja2>=3.1.6,<4.0.0",

    # Datenbank
    "sqlalchemy>=2.0.43,<2.1.0",
    "alembic>=1.16.5,<2.0.0",
    "asyncpg>=0.30.0,<0.32.0",
    "aiomysql>=0.2.0,<0.3.0",
    "aiosqlite>=0.21.0,<0.22.0",

    # Authentifizierung
    "bcrypt>=4.3.0,<5.0.0",
    "pyjwt>=2.10.1,<3.0.0",

    # Aufgabenverarbeitung
    "celery[redis]>=5.4.0,<6.0.0",
    "redis>=4.5.2,<6.0.0",

    # LLM-Integration
    "litellm>=1.82.6,<2.0.0",
    # huggingface-hub temporarily removed - will be re-added via LiteLLM integration

    # Web-Scraping
    "aiohttp>=3.11.0,<3.13.0",
    "yarl>=1.17.0,<2.0.0",
    "beautifulsoup4>=4.14.2,<5.0.0",

    # HTTP Client
    "urllib3>=2.2.0,<3.0.0",

    # Core dependencies (explicit constraints for reliable resolution)
    "typing-extensions>=4.12.0,<5.0.0",

    # Verschlüsselung & Sicherheit
    "cryptography>=46.0.2,<47.0.0",
    "pydantic[email]>=2.11.10,<3.0.0",
    "python-multipart>=0.0.20,<0.1.0",

    # Protokollierung & Überwachung
    # (Using built-in Python logging - simplified)

    # Konfiguration
    "pydantic-settings>=2.11.0,<3.0.0",

    # Hilfswerkzeuge
    "httpx>=0.28.1,<0.30.0",
]

[project.optional-dependencies]
dev = [
    # Testen
    "pytest>=8.4.2,<9.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "uvloop>=0.21.0,<0.23.0",   # See [test] extra: load-bearing DB-fixture loop on 3.13.1
    "httpx>=0.28.1,<0.30.0",
    "pytest-mock>=3.15.1,<4.0.0",

    # Code-Qualität
    "black>=25.9.0,<26.0.0",
    "isort>=6.0.1,<7.0.0",
    "flake8>=7.3.0,<8.0.0",
    "mypy>=1.18.2,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0",

    # Entwicklungstools
    "ipython>=9.3.0,<10.0.0",
    "ipdb>=0.13.13,<0.14.0",
    "watchfiles>=1.1.0,<2.0.0",
]

# Minimal, self-contained set to run the rebuilt unit suite (`pytest tests/unit`)
# in a clean environment. Kept in sync with requirements-dev.txt. Anything the
# current suite does not actually import lives out of here on purpose — add a
# dependency back only when a test starts using it.
test = [
    # Test runner + async support — the rebuilt suite runs on these alone.
    "pytest>=8.4.2,<9.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",

    # uvloop event-loop policy — load-bearing on Python 3.13.1, where the
    # default asyncio loop can leave aiosqlite futures unwoken and hang the DB
    # fixtures (see tests/conftest.py). Pulled in transitively by litellm on
    # Linux, but pinned here so a clean env never silently drops it.
    "uvloop>=0.21.0,<0.23.0",

    # Coverage for the opt-in CI command: pytest --cov=src --cov-fail-under=90
    "pytest-cov>=7.0.0,<8.0.0",
]

[project.urls]
Homepage = "https://github.com/fgrng/yourMoment"
Repository = "https://github.com/fgrng/yourMoment"
Issues = "https://github.com/fgrng/yourMoment/issues"

[project.scripts]
yourMoment = "src.main:app"

# The application is imported as the top-level `src` package (e.g.
# `from src.services import ...`), so tell hatchling to ship `src/` as-is.
# Without this, `pip install .` / `pip install -e '.[test]'` fails because
# hatchling cannot auto-detect a package named `yourmoment`.
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
]
# Coverage flags are intentionally omitted from the default run so that
# `pytest tests/unit -q` stays fast during the test-suite rebuild.
# Enable coverage explicitly in CI: pytest --cov=src --cov-fail-under=90 ...
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Test environment variables are set in tests/conftest.py via os.environ.setdefault()
# rather than via pytest-env (which is not installed in the dev extras).
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# FastAPI testing configuration
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
# Test markers for TDD workflow and project structure
markers = [
    "slow: markiert Tests als langsam (abwählen mit '-m \"not slow\"')",
    "integration: markiert Tests als Integrationstests",
    "contract: markiert Tests als API-Vertragstests (TDD Phase 3.2)",
    "unit: markiert Tests als Unit-Tests",
    "performance: markiert Tests als Performance-Tests (<500ms requirement)",
    "e2e: markiert Tests als End-to-End Tests",
    "auth: markiert Tests für Authentifizierung",
    "web_scraping: markiert Tests für myMoment Web-Scraping",
    "llm: markiert Tests für LLM-Integration",
    "encryption: markiert Tests für Verschlüsselung",
    "celery: markiert Tests für Background-Tasks",
    "database: markiert Tests die eine Datenbank benötigen",
    "external_api: markiert Tests die externe APIs verwenden",
    "requires_redis: markiert Tests die Redis benötigen",
]
# Test discovery patterns
norecursedirs = [
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
    "venv*",
    ".venv*",
    "htmlcov",
]


[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
concurrency = ["thread", "greenlet"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/node_modules/*",
    "*/static/vendor/*",
    "src/lib/dev_tools.py",
    "src/scripts/*",
]
# Include async context tracking
context = '${TOX_ENV_NAME}'

[tool.coverage.report]
# Show missing lines in terminal output
show_missing = true
skip_covered = false
skip_empty = true
# Precision for coverage percentage
precision = 2
# Exclude lines that don't need testing
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if self.debug:",
    "if settings.DEBUG",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
    "except ImportError:",
    "except ModuleNotFoundError:",
    "pass",
    "\\.\\.\\.",
]
# Require minimum coverage for individual files
fail_under = 90
# Sort output by coverage percentage
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"
title = "yourMoment Test Coverage Report"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
show_contexts = true

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Verzeichnisse
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src", "tests"]
skip = ["migrations"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "migrations/",
    "venv/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "sentry_sdk.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "venv",
    "build",
    "dist",
]
